<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/welcome_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="15dp">

    <ImageView
        android:id="@+id/welcome_screen_image"
        android:layout_width="wrap_content"
        android:layout_height="162dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/welcomeimage" />

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/poppins_thin"
        android:text="@string/welcome_screen_title"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/welcome_screen_brief"
        android:textColor="@color/material_dynamic_neutral50"
        android:textSize="13sp" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.TonalButton"
        android:id="@+id/WelcomeScreenContinueBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="@font/poppins"
        android:text="@string/welcome_btn_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="14sp" />

</LinearLayout>
</ScrollView>
