<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding_default"
    tools:context=".fragment.SignInPasswordFragment">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_placeholder_hint"
        android:id="@+id/signInPasswordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <EditText
            android:id="@+id/passwordSignInInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/passwordicon"
            android:drawablePadding="@dimen/edit_text_icon_padding"
            android:fontFamily="@font/poppins"
            android:inputType="textPassword"
            android:padding="@dimen/edit_text_padding"
            android:textSize="@dimen/edit_text_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/passwordContinueBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_top"
        android:fontFamily="@font/poppins"
        android:text="@string/continue_btn_txt"
        android:textSize="@dimen/button_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin_top"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/forgot_password_link_text"
            android:textSize="@dimen/link_click_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reset_password_link_view"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minWidth="0dp"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:fontFamily="@font/poppins"
            android:padding="0dp"
            android:text="@string/forgot_password_link"
            android:textAllCaps="false"
            android:textSize="@dimen/link_click_text_size"
            android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:indeterminateOnly="true"
        android:padding="15dp"
        android:id="@+id/signInProgress"
        style="?android:attr/progressBarStyle"
        android:layout_centerInParent="true"
        android:background="@drawable/edit_text_background"
        android:layout_width="wrap_content"
        android:visibility="invisible"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:layout_height="wrap_content" />

</LinearLayout>