<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding_default"
    tools:context=".fragment.SignInEmailFragment">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_placeholder_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/signInEmailLayout"
        app:placeholderText="example@email.com"
        app:placeholderTextAppearance="@style/placeholderFont"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailSignInInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/poppins"
            android:textSize="@dimen/edit_text_size"
            android:drawablePadding="@dimen/edit_text_icon_padding"
            android:drawableStart="@drawable/emailicon"
            android:padding="@dimen/edit_text_padding" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="@dimen/default_margin_top"
        android:id="@+id/emailContinueBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/continue_btn_txt"
        android:textSize="@dimen/button_text_size" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin_top"
        android:orientation="horizontal">
        <TextView

            android:fontFamily="@font/poppins"
            android:textSize="@dimen/link_click_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_link_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_link_view"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/poppins"
            android:padding="0dp"
            android:text="@string/sign_up_link"
            android:textAllCaps="false"
            android:textSize="@dimen/link_click_text_size"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_marginVertical="10dp"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins"
        android:textSize="@dimen/link_click_text_size"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OR" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:id="@+id/googleContinueBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="@font/poppins"
        app:icon="@drawable/googleicon"
        app:iconTint="@null"
        app:iconTintMode="@null"
        app:iconSize="26dp"
        android:text="Continue with Google"
        android:textSize="@dimen/button_text_size" />

</LinearLayout>